Todos os requisitos preenchidos, agora so falta estilizar.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <h1 id="title">Paleta de Cores</h1>
     <div id="color-palette">
         <ul>
-            <li class="color selected" id="color_1">color</li>
-            <li class="color" id="color_2">color</li>
-            <li class="color" id="color_3">color</li>
-            <li class="color" id="color_4">color</li>
+            <li class="color selected" id="color_1"></li>
+            <li class="color" id="color_2"></li>
+            <li class="color" id="color_3"></li>
+            <li class="color" id="color_4"></li>
         </ul>
     </div>
     
